# tns_serv

./: .env  .gitignore  OLD_app.py  app.py  db.sqlite3  jobs.db  pyproject.toml  pyrightconfig.json  run-production-tmux.sh  run-production.sh  run.sh  shell.nix  tree.txt
app/: admin_auth.py  api.py  database.py  enums.py  globals.py  main.py  models.py  schemas.py  utils.py
instance/: db.sqlite3
